# cpp-deque

./: .gitignore  README.md
deque-emulator/: CMakeLists.txt  algo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.h  submission.pro
